支持生成只有一个类中只有一个@ObjectCopier注解的拷贝方法